# aoc_2024

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yaml
benches/: timings.rs
gridthings/: Cargo.toml  README.md
gridthings/examples/: aoc_2021_day09_part1.rs  aoc_2023_day03_part1.rs  aoc_2024_day04_part1.rs  aoc_2024_day06_part1.rs  aoc_2024_day08_part1.rs  euler_0011.rs
gridthings/src/: cell.rs  direction.rs  grid.rs  lib.rs  segment.rs
pyo3/: Cargo.toml  pyproject.toml
pyo3/src/: lib.rs
pyo3/src/aoc_2024_pyo3/: __init__.py  day01.py  day02.py
pyo3/tests/: test_solutions.py
python/: pyproject.toml
python/src/aoc_2024/: day01.py  day02.py  utils.py
python/tests/: test_solutions.py
rust/: Cargo.toml
rust/benches/: day01_memory.rs  day01_timing.rs  timing.rs
rust/src/: day01.rs  day02.rs  day03.rs  lib.rs  main.rs  utils.rs
rust/tests/: solutions.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  main.rs  utils.rs
tests/: solutions.rs
wasm/: Cargo.toml  hello.py  pyproject.toml
wasm/src/: lib.rs
wasm/static/: index.html
