[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["gridthings"]

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
regex = "1.11.1"
gridthings = { path = "gridthings" }
rayon = "1.10.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "timings"
harness = false
